examples/test/testpolicy6009.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6009
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key47: value9
      key28: value2
      key1: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value4
      podSelector:
        matchLabels:
          key19: value16
          key15: value33
